--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,5 +1,6 @@
     <link rel="stylesheet" href="/css/home.css">
     <h1>CSV Upload</h1>
+    
     <form enctype="multipart/form-data" method="post" action="/create" id="form1" >
         <input type="file" name="file" id="file"><br/>
         <button type="submit" id="Upload" >Upload File</button>
@@ -12,7 +13,9 @@
             <%for(let i=0;i<Files.length;i++){%>
                 
                 <p class="uploaded-files">
-                    <a href="/View/?filePath=<%=Files[i].File%>"><%=Files[i].Name%></a>
+                    <span>
+                        <i class="fas fa-file-csv"></i>
+                    <a href="/View/?filePath=<%=Files[i].File%>"><%=Files[i].Name%></a></span>
                     <a href="/delete/?filePath=<%=Files[i].File%>">
                         <i class="fas fa-trash"> </i></a>
                 </p>
