--- a/Views/table.ejs
+++ b/Views/table.ejs
@@ -9,7 +9,7 @@
     <table border="2" class="table table-success table-striped">
 
     <thead>
-        <% var keys=Object.keys(results[0])%>
+        <% var keys=keys[0].split(',')%>
         
         <!-- <%#For Dynamic HEaders%> -->
     <% for(let i=0;i<keys.length;i++){%>
@@ -20,10 +20,12 @@
     </thead>
     <tbody>
         <!-- <%#Iterating over all parsed file and adding to table%> -->
-    <% for(let i=0;i<results.length;i++){%>
+    <% for(let i=1;i<results.length;i++){%>
+        <%var ans=results[i][0].split(',')%>
         <tr>
         <% for(let j=0;j<keys.length;j++){%>
-            <td><%=results[i][keys[j]]%></td>
+
+            <td><%=ans[j]%></td>
             
             <%}%>
         </tr>
